[package]
name = "jeb1pochybridpy"                       # name of the Python module (and shared lib)
version = "0.1.0"
edition = "2024"
description = ""
license = "MIT"
authors = ["Jebbex <107323805+Jebbex1@users.noreply.github.com>"]
readme = "../README.md"

# This crate compiles to a Python extension module (.so / .pyd)
[lib]
name = "jeb1pochybridpy"
crate-type = ["cdylib"]

[dependencies]
# The core Rust logic — local crate
jeb1pochybrid = { path = "../core" }

# PyO3 for Python bindings
pyo3 = { version = "0.27.1", features = ["extension-module"] }


[package.metadata.maturin]
# Optional but useful: ensures maturin knows this crate is the Python extension
bindings = "pyo3"
